\name{NEWS}
\title{NEWS for GENESIS}
\section{Version 2.19.7}{
    \itemize{
      \item Add options to remove NxN matrices from a null model (function nullModelSmall and fitNullModel argument return.small).
      \item Add check for collinearity in covariates.
    }
}
\section{Version 2.19.6}{
    \itemize{
      \item Add test options "BinomiRare" and "CMP" to assocTestSingle and assocTestAggregate.
    }
}
\section{Version 2.19.5}{
    \itemize{
      \item Add function jointScoreTest to perform a joint score test of a set of variants using a null model and a matrix of genotype dosages.
    }
}
\section{Version 2.19.4}{
    \itemize{
      \item Add function effectAllele to return the effect allele for association tests.
    }
}
\section{Version 2.19.1}{
    \itemize{
      \item Force design matrices to be non-sparse.
    }
}
\section{Version 2.17.4}{
    \itemize{
      \item Fix a bug that prevented use of multiple environment variables in GxE.
    }
}
\section{Version 2.17.3}{
    \itemize{
      \item Allow divergence to be NULL in pcair and pcairPartition.
    }
}
\section{Version 2.17.1}{
    \itemize{
      \item Fix a bug in null model when starting variance component is close to 0.
    }
}
\section{Version 2.16.0}{
    \itemize{
      \item Add option "Score.SPA" to assocTestSingle. This option for binary outcomes uses the saddlepoint approximation to compute p-values and is recommended for unbalanced case/control ratios.
      \item "Wald" is no longer a test option in assocTestSingle. Instead, the Score test is always run, and "Est" (an estimation of the Wald test beta) is always returned also. The values in the "Est" are identical to what was previously returned by test="Wald".
      \item Since the only single-variant test option is "Score", "burden.test" is no longer an option in assocTestAggregate. Output returned is now identical to that described above for assocTestSingle.
    }
}
\section{Version 2.15.3}{
    \itemize{