@@ -17,9 +17,9 @@ test_that("pcrelate2 - 2 sample blocks", {
     svd <- .testData()
     mypcs <- .testPCs(svd)
     iterator <- SeqVarBlockIterator(svd, verbose=FALSE)
-    myrel <- pcrelate(iterator, pcs = mypcs, verbose=FALSE)
+    myrel <- pcrelate(iterator, pcs = mypcs, small.samp.correct=FALSE, verbose=FALSE)
     resetIterator(iterator, verbose=FALSE)
-    myrel2 <- pcrelate(iterator, pcs = mypcs, sample.block.size=50, verbose=FALSE)
+    myrel2 <- pcrelate(iterator, pcs = mypcs, sample.block.size=50, small.samp.correct=FALSE, verbose=FALSE)
     expect_equal(myrel, myrel2)
     seqClose(svd)
 })
@@ -28,9 +28,9 @@ test_that("pcrelate2 - >2 sample blocks", {
     svd <- .testData()
     mypcs <- .testPCs(svd)
     iterator <- SeqVarBlockIterator(svd, verbose=FALSE)
-    myrel <- pcrelate(iterator, pcs = mypcs, verbose=FALSE)
+    myrel <- pcrelate(iterator, pcs = mypcs, small.samp.correct=FALSE, verbose=FALSE)
     resetIterator(iterator, verbose=FALSE)
-    myrel2 <- pcrelate(iterator, pcs = mypcs, sample.block.size=20, verbose=FALSE)
+    myrel2 <- pcrelate(iterator, pcs = mypcs, sample.block.size=20, small.samp.correct=FALSE, verbose=FALSE)
     expect_equal(myrel, myrel2)
     seqClose(svd)
 })
@@ -70,9 +70,9 @@ test_that("pcrelate2 - GenotypeData - sample blocks", {
     gd <- .testGenoData()
     mypcs <- .testGenoPCs(gd)
     iterator <- GWASTools::GenotypeBlockIterator(gd)
-    myrel <- pcrelate(iterator, pcs = mypcs, verbose=FALSE)
+    myrel <- pcrelate(iterator, pcs = mypcs, small.samp.correct=FALSE, verbose=FALSE)
     iterator <- GWASTools::GenotypeBlockIterator(gd)
-    myrel2 <- pcrelate(iterator, pcs = mypcs, sample.block.size=50, verbose=FALSE)
+    myrel2 <- pcrelate(iterator, pcs = mypcs, sample.block.size=50, small.samp.correct=FALSE, verbose=FALSE)
     expect_equal(myrel, myrel2)
     GWASTools::close(gd)
 })
@@ -91,10 +91,15 @@ test_that("pcrelate2 - small sample correction", {
     svd <- .testData()
     mypcs <- .testPCs(svd)
     iterator <- SeqVarBlockIterator(svd, verbose=FALSE)
-    myrel <- pcrelate(iterator, pcs = mypcs, verbose=FALSE)
+    myrel <- pcrelate(iterator, pcs = mypcs, small.samp.correct=FALSE, verbose=FALSE)
     resetIterator(iterator, verbose=FALSE)
-    myrel2 <- pcrelate(iterator, pcs = mypcs, small.samp.correct = TRUE, verbose=FALSE)
+    myrel2 <- pcrelate(iterator, pcs = mypcs, small.samp.correct=TRUE, verbose=FALSE)
     expect_equal(myrel$kinBtwn[,1:2], myrel2$kinBtwn[,1:2])
+    
+    resetIterator(iterator, verbose=FALSE)
+    expect_warning(myrel <- pcrelate(iterator, pcs = mypcs, sample.block.size=50, small.samp.correct=TRUE, verbose=FALSE),
+                   "small.samp.correct can only be used when all samples are analyzed in one block")
+    
     seqClose(svd)
 })
 
@@ -116,7 +121,7 @@ test_that("pcrelate2 - scale=none", {
     iterator <- SeqVarBlockIterator(svd, verbose=FALSE)
     myrel <- pcrelate(iterator, pcs = mypcs, verbose=FALSE)
     resetIterator(iterator, verbose=FALSE)
-    myrel2 <- pcrelate(iterator, pcs = mypcs, scale="none", ibd.probs=FALSE, verbose=FALSE)
+    expect_warning(myrel2 <- pcrelate(iterator, pcs = mypcs, scale="none", ibd.probs=FALSE, verbose=FALSE), "small.samp.correct")
     expect_equal(myrel$kinBtwn[,1:2], myrel2$kinBtwn[,1:2])
     seqClose(svd)
 })
